Refactor bonus drop handling in MobFarmScreen